# hid-proxy-for-ble-keyboard

./: .gitignore  CMakeLists.txt  README.org  build_flash_monitor.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
docs/superpowers/plans/: 2026-05-24-robustness-pass.md  2026-05-24-web-admin-ui.md
docs/superpowers/specs/: 2026-05-24-robustness-pass-design.md  2026-05-24-web-admin-ui-design.md
main/: CMakeLists.txt  button_gesture.c  button_gesture.h  ch9329_pack.c  ch9329_pack.h  ch932x.c  ch932x.h  device_store.c  device_store.h  esp_hid_gap.c  esp_hid_gap.h  esp_hid_host_main.c  led.c  led.h  led_duty.c  led_duty.h  runtime_mode.c  runtime_mode.h  storage.c  storage.h  web_auth.c  web_auth.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
main/web_assets/: app.css  app.js  index.html  login.html
test/host/: CMakeLists.txt  nvs_stub.c  nvs_stub.h  runner.c  test_button_gesture.c  test_ch9329_pack.c  test_device_store.c  test_led_duty.c  test_smoke.c  test_web_auth.c
